--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
   <div class="wrap">
     <header class="topbar">
       <div class="header-left">
-        <div class="logos">
+        <a href="index.html" class="logos" style="text-decoration:none; cursor:pointer;" title="Voltar para o Início">
           <img src="japeri-logo.png" alt="Japeri" class="logo-small">
           <img src="brasil-sorridente-logo.png" alt="Brasil Sorridente" class="logo-small">
+          </a>
         </div>
 
       </div>
