--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     @media(min-width:600px){.logo-small{height:44px}.topbar{padding:12px 16px;gap:12px}.wrap{padding:12px}}
     @media(min-width:900px){.logo-small{height:56px}.hero-illustration img{max-width:200px}.big-number{font-size:clamp(36px,6vw,72px)}.wrap{padding:8px}.menu-btn{display:inline-flex;padding:10px 14px;font-size:13px}.side-drawer{right:16px;width:280px;transform:translateX(20px);border-radius:12px}#drawerOverlay{display:none}.card{margin-bottom:16px}.hero-card{padding:20px}.topbar{padding:12px 20px}.cards-row{display:grid;grid-template-columns:repeat(2,1fr);gap:16px}}
     /* hide potential duplicate buttons visually (safety): show only first menu-btn */
-    .menu-btn:not(:first-of-type){display:none !important} .nav{display:none !important}
+    /* .menu-btn:not(:first-of-type){display:none !important} .nav{display:none !important} */
     /* Estilo para a nova seção de destaque de avisos, similar ao hero-card, mas menor e com o foco de ser clicável */
     .highlight-card{
       background: linear-gradient(135deg, var(--warning) 0%, var(--warning) 100%);
