--- a/avisos.html
+++ b/avisos.html
@@ -60,8 +60,8 @@
         <h1>Avisos e Comunicados</h1>
         <div class="avisos-list" id="avisosList">
           <div class="aviso">
-            <div class="aviso-title">Nenhum aviso cadastrado</div>
-            <div class="muted small">Use esta área futuramente para publicar comunicados.</div>
+            <div class="aviso-title">Nenhum aviso importante</div>
+            <div class="muted small">Nenhum aviso no momento.</div>
           </div>
         </div>
       </section>
