Fix: Corrigir visibilidade da seção de dúvidas no mobile
- Removida classe 'small' do parágrafo de contato
- Agora o email e texto aparecem corretamente em dispositivos móveis

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div class="card">
           <h3>Dúvidas?</h3>
-          <p class="muted small">Entre em contato: <a href="mailto:odontologiajaperi@gmail.com">odontologiajaperi@gmail.com</a></p>
+          <p class="muted">Entre em contato: <a href="mailto:odontologiajaperi@gmail.com">odontologiajaperi@gmail.com</a></p>
         </div>
       </section>
     </main>
